--- a/app/views/pass_spca/show.html.erb
+++ b/app/views/pass_spca/show.html.erb
@@ -1,7 +1,7 @@
-<h1><%= @animal %></h1>
+<h1><%@animal%></h1>
 
 
 
-<p>Directed by <%= @animal.breed %></p>
-<p>Release Year <%= @animal.color %></p>
-<p>Starring <%= @animal.age %></p>
+<p>Breed <%= @animal.breed %></p>
+<p>Color <%= @animal.color %></p>
+<p>Age <%= @animal.age %></p>
